# Orqestra

./: .gitignore  CHANGELOG.md  Cargo.toml  Orqestra_Specification_v0.5.1.md  README.md  orqestra_v1_0_2_spec.md  orqestra_v1_0_2_spec_corrected.md  orqestra_v1_0_3_spec.md  orqestra_v1_0_4_spec.md  orqestra_v_1_0_1_spec.md  release-manifest.json
.github/ISSUE_TEMPLATE/: ai_mode_issue.yml  bug_report.yml  dashboard_issue.yml  install_issue.yml  linux_smoke_report.yml
.github/workflows/: dashboard.yml  desktop-release.yml  orqestra-agents.yml  secret-scan.yml  test-ci.yml
apps/dashboard/: index.html  package-lock.json  package.json  wrangler.toml
apps/desktop/: package-lock.json  package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: agents.rs  beta_evidence.rs  code_intel.rs  commit.rs  credentials.rs  diagnostics.rs  git.rs  graph.rs  mod.rs  onboarding.rs  onboarding_types.rs  path_guard.rs  project_validation.rs  readiness.rs  roadmap.rs  sync.rs
apps/desktop/src-tauri/src/diagnostics/: bundle.rs  mod.rs  redaction.rs
apps/desktop/src-tauri/src/lifecycle/: commands.rs  event_log.rs  mod.rs  orient.rs  types.rs
apps/desktop/src-tauri/src/security/: auto_apply.rs  keyring_store.rs  mod.rs  patch_guard.rs  token_mask.rs
apps/desktop/src-tauri/tests/: commands_agent_context.rs  commands_agents.rs  commands_architect.rs  commands_beta_evidence.rs  commands_code_intel.rs  commands_coherence.rs  commands_credentials.rs  commands_diagnostics.rs  commands_diagnostics_beta.rs  commands_first_run.rs  commands_git.rs  commands_git_provider.rs  commands_git_write.rs  commands_graph.rs  commands_hunk_map.rs  commands_lifecycle.rs  commands_onboarding.rs  commands_onboarding_persistence.rs  commands_patch_governance.rs  commands_project_validation.rs  commands_readiness.rs  commands_redaction.rs  commands_relay_connection.rs  commands_roadmap.rs  commands_runtime_evidence.rs  commands_safe_diff.rs  commands_security_boundary.rs  commands_semantic_prep.rs
crates/code-intel/: Cargo.toml
crates/git-bridge/: Cargo.toml
crates/git-bridge/src/: backfill.rs  commit.rs  commits.rs  diff.rs  error.rs  gix_ops.rs  lib.rs  operational_risk.rs  semantic.rs  semantic_prep.rs  snapshot.rs  status.rs
crates/graph-store/: Cargo.toml
crates/loro-engine/: Cargo.toml
crates/loro-engine/src/: engine.rs  lib.rs  protocol.rs  relay.rs  relay_actor.rs  sync.rs
crates/md-indexer/: Cargo.toml
crates/md-indexer/src/: coordinator.rs  duration.rs  error.rs  evidence_schema.rs  graph.rs  indexer.rs  lib.rs  parser.rs  types.rs
crates/md-indexer/tests/fixtures/roadmap/: TASK-2026-042.md
demo/: v1.0.10-demo-evidence.md  v1.0.10-linux-runtime-blocker.md  v1.0.10-linux-wsl2-smoke-attempt.md  v1.0.10-platform-matrix.md  v1.0.10-windows-smoke.md  v1.0.11-demo-evidence.md  v1.0.11-linux-wslg-smoke.md  v1.0.11-platform-matrix.md  v1.0.11-windows-smoke.md  v1.0.12-demo-evidence.md  v1.0.12-linux-native-smoke.md  v1.0.12-platform-matrix.md  v1.0.12-windows-smoke.md  v1.0.5-demo-evidence.md  v1.0.5-windows-smoke.md  v1.0.6-demo-evidence.md  v1.0.6-windows-smoke.md  v1.0.7-demo-evidence.md  v1.0.7-signature-verification.md  v1.0.7-windows-smoke.md  v1.0.8-demo-evidence.md  v1.0.8-linux-build-evidence.md  v1.0.8-macos-feasibility.md  v1.0.8-platform-matrix.md  v1.0.8-windows-smoke.md  v1.0.9-demo-evidence.md  v1.0.9-linux-bundle-evidence.md  v1.0.9-linux-smoke-blocked.md  v1.0.9-platform-matrix.md  v1.0.9-windows-smoke.md  v1.1.0-demo-evidence.md  v1.1.1-demo-evidence.md  v1.2.0-demo-evidence.md  v1.2.1-demo-evidence.md  v1.3.0-demo-evidence.md  v1.3.1-demo-evidence.md  v1.4.0-agent-context-evidence.md  v1.4.0-demo-evidence.md  v1.4.1-agent-context-evidence.md  v1.4.1-demo-evidence.md  (+9 more)
demo/ai-fixtures/: README.before.md  bugfix-task.md  docs-task.md  sample_bug.before.ts
docs/: DEMO_EVIDENCE_v1.0.4.md  DEMO_SCRIPT_v1.0.3.md  DEMO_SCRIPT_v1.0.4.md  DEMO_SCRIPT_v2.0.0.md  DIAGNOSTICS.md  FIRST_RUN.md  RELEASE_ARTIFACTS.md  SETUP_CHECKS.md  USER_GUIDE.md  agent-context-quality.md  architect-agent.md  autonomy-observability.md  beta-issue-triage.md  beta-quickstart.md  cloud-crdt-relay.md  code-intelligence.md  controlled-autonomy.md  docs-autonomy-expansion.md  installer-diagnostics.md  linux-native-smoke-guide.md  linux-smoke-evidence-template.md  native-git.md  operational-risk.md  patch-governance.md  persistent-onboarding.md  platform-confidence.md  product-readiness.md  relay-connection.md  release-notes-template.md  release-signing-plan.md  runtime-evidence-dashboard.md  safe-diff-context.md  security-boundary.md  semantic-commit-preparation.md  troubleshooting.md
docs/beta/: demo-scenario.md  external-beta-evidence-review.md  external-beta-evidence.md  external-beta-participant-instructions.md  first-external-beta-session.md  platform-support.md  self-serve-beta-checklist.md  troubleshooting.md
roadmap/: TASK-2026-038.md  TASK-2026-040.md  TASK-2026-042.md  TASK-2026-045.md  TASK-2026-050.md  TASK-2026-055.md  TASK-2026-056.md  TASK-2026-060.md  TASK-2026-061.md  TASK-2026-062.md  TASK-2026-063.md  TASK-2026-064.md  TASK-2026-065.md  TASK-2026-066.md  TASK-2026-067.md  TASK-2026-068.md  TASK-2026-069.md  TASK-2026-070.md  TASK-2026-071.md  TASK-2026-072.md  TASK-2026-073.md  TASK-2026-074.md  TASK-2026-075.md  TASK-2026-076.md  TASK-2026-077.md  TASK-2026-078.md  TASK-2026-079.md  TASK-2026-080.md  TASK-2026-081.md  TASK-2026-082.md  TASK-2026-083.md  TASK-2026-084.md  TASK-2026-085.md  TASK-2026-086.md  TASK-2026-087.md  TASK-2026-088.md  TASK-2026-089.md  TASK-2026-090.md  TASK-2026-091.md  TASK-2026-092.md  (+150 more)
scripts/: validate-release-manifest.ts
services/ai/: pyproject.toml
services/ai/src/orqestra_ai/: architect_agent.py  bugfix_agent.py  docs_agent.py  embed.py  explore.py  intent.py  lifecycle_ai.py  main.py  models.py  provider.py  query_history.py  reasoning.py
services/ai/tests/: test_provider_truth.py
(+112 files in other folders)
