# Cargo.toml (repo root)
[workspace]
members = [
    "crates/md-indexer",
    "crates/graph-store",
    "crates/git-bridge",
    "apps/desktop/src-tauri",
]
resolver = "2"

[workspace.dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
serde_yaml  = "0.9"
tokio       = { version = "1", features = ["full"] }
thiserror   = "1"
tracing     = "0.1"
uuid        = { version = "1", features = ["v4"] }
dashmap     = "6"
notify      = "6"

[profile.release]
lto = true
codegen-units = 1
