[package]
name = "git-bridge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test_backfill"
path = "src/bin/test_backfill.rs"

[[bin]]
name = "test_e2e"
path = "src/bin/test_e2e.rs"

[dependencies]
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
uuid         = { workspace = true }
chrono       = { version = "0.4", features = ["serde"] }
gix          = { version = "0.84", features = ["blocking-http-transport-reqwest", "revision"] }
md-indexer   = { path = "../md-indexer" }
reqwest      = { version = "0.12", features = ["json", "blocking"] }
code-intel   = { path = "../code-intel" }

[dev-dependencies]
tempfile = "3"
