[package]
name = "loro-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
loro = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
