[package]
name = "md-indexer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "orqestra"
path = "src/bin/orqestra.rs"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
pulldown-cmark = "0.11"
walkdir    = "2"
chrono     = { version = "0.4", features = ["serde"] }
clap       = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
