[package]
name = "orqestra-desktop"
version = "1.0.8"
edition = "2021"

[dependencies]
tauri      = { version = "2", features = [] }
serde      = { workspace = true }
serde_json = { workspace = true }
tracing    = { workspace = true }
thiserror  = { workspace = true }
chrono     = { version = "0.4", features = ["serde"] }

# Core crates — bridge between Tauri commands and business logic
md-indexer = { path = "../../../crates/md-indexer" }
git-bridge = { path = "../../../crates/git-bridge" }
graph-store = { path = "../../../crates/graph-store" }
loro-engine = { path = "../../../crates/loro-engine" }

# Async runtime for graph state
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Native desktop capabilities
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

# Secure credential storage
twox-hash = "2"
getrandom = "0.3"

# Settings persistence (non-credential data only)
tauri-plugin-store = "2"

# v1.0.2: OS-keychain-backed credential storage
keyring-core = "1"
windows-native-keyring-store = "1"

# v1.0.3: Diagnostics and readiness
dirs = "6"
regex-lite = "0.1"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
